--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2146,6 +2146,16 @@ ul li {
     }
   }
   
+  #painters-wireframes .image-wrapper {
+    text-align: center; /* Center the image */
+    margin-top: 20px; /* Optional space between content and image */
+  }
+  
+  #painters-wireframes .wireframe-image {
+    max-width: 100%; /* Ensure the image is responsive */
+    height: auto; /* Maintain aspect ratio */
+  }
+  
   
 
 #painters-branding h2 {
